###### TWE 5.2-1 RELEASED ######
2015-05-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Supported new activity extended attribute "FORM_PAGE_URL
        This attribute is a reference to XPDL_STRING and specifies the URL location of the form to open to see activity details
      - Support for new system variables
      - Introduced constants for the names/description of the system variables

2015-05-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode:
      - Added support for ExecuteSql tool agent
      - Allowed usage of config string and xpdl string variables in Performer, Deadline, Transition condition and ActualParameter expressions
      - Improved validation

2015-04-22 Sasa Bojanic <sasaboy@together.at>
   # Improved Expression Lane Editor - now possible to use variables when editing expressions
   # Filtering of variables by type in PanelUtilities.getPossibleVariableChoices() now makes a distinction if variable is array or not
   # Shark mode:
      - updated support for LDAPToolAgent according to the changes in LDAPClientInterface
      - Deadline, Limit and Error emails now supports extended attribute(s) for specifying recipient variable (SMTP_xxx_HANDLER_RECIPIENT_VARIABLE)

2015-04-17 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - better support for UserGroupToolAgent (added possibility to use getGroupByEMailAddress and getUserByEMailAddress methods)

2015-03-16 Sasa Bojanic <sasaboy@together.at>
   # Allowed in-place editing of Id, Name and Value attributes in tables

2015-03-11 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - improved support for extended attributes that allow evaluation of priority/limit/description/name of activity/process
        (update of expressions when Id of used variable is changing, GUI support with multi-line text editor)

###### TWE 5.1-1 RELEASED (2015-02-17) ######
2014-12-23 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 